Neue Vorlesung, Skizzen (angefangen)
Es fehlen für VL12 noch die Referenzen
Skizzen sind zum Teil noch nicht fertig
Kein Abgleich bei VL 11 möglich

--- a/vl_10.tex
+++ b/vl_10.tex
@@ -118,6 +118,7 @@
 	\leq f(b)$. \\
 	Das heißt $f$ ist beschränkt. Zu $n \in \mathbb{N}$ wählen wir eine 
 	Partition \linebreak $P_n = \{x_0, \hdots, x_k\}$ mit $\Delta x_i < \frac{1}{n}$.
+	\input{monotone_fkt_riemann_intbar}
 	Dann gilt:
 	\begin{align*}
 		S(P_n, f) - s(P_n,f) = & \sum_{i=1}^n (M_i - m_i)\Delta x_i
