--- a/vl_07.tex
+++ b/vl_07.tex
@@ -41,7 +41,7 @@
 	 \input{plot_MWS}
 }\end{Satz}
 	
-\begin{Satz}[Mittelwertsatz(MWS)]{
+\begin{Satz}[Mittelwertsatz(MWS)]{\label{vl_07_MWS}
 	Sei $f: [a,b] \rightarrow \mathbb{R}$ stetig und differenzierbar auf 
 	(a,b). Dann gibt ex ein $\xi \in (a,b)$ mit 
 	\begin{align*}
