--- a/vl_11.tex
+++ b/vl_11.tex
@@ -250,7 +250,7 @@
 	\end{align*}
 	Offensichtlich gilt 
 	\begin{align*}
-		abs{f(x)} = \abs{c f(x)} \geq c f(x) \text{ } (x \in [a,b])
+		\abs{f(x)} = \abs{c f(x)} \geq c f(x) \text{ } (x \in [a,b])
 	\end{align*}
 	Damit gilt mit Satz~\ref{vl_11_satz24}
 	\begin{align*}
@@ -269,7 +269,7 @@
 	\textbf{Bemerkung:}
 	Für $g = 1$ gilt dann: 
 	\begin{align*}
-		int_a^b f \dd{x} = f(\xi) \cdot (b-a)
+		\int_a^b f \dd{x} = f(\xi) \cdot (b-a)
 	\end{align*}
 	\textbf{Beweis:} Man setze: $h: [a,b] \rightarrow \mathbb{R},$ $y \mapsto f(y) 
 	\cdot \int_a^b g \dd{x}$. $h$ ist stetig und es gilt:
@@ -284,5 +284,7 @@
 	\begin{align*}
 		\int_a^b fg\dd{x} \in [\inf_{y \in [a,b]} h(y),  \sup_{y \in [a,b]} h(y)]
 	\end{align*}
+	\textbf{Bemerkung:} Wir haben bereits gesehen: Polynome sind beliebig oft
+	 differenzierbar.
 	
 }\end{Satz}
