--- a/vl_12.tex
+++ b/vl_12.tex
@@ -1,5 +1,3 @@
-%TODO Einfügen des letzten Satzes in VL 11
-
 \section{Differentiation und Integration}
 
 \begin{Bemerkung}{
@@ -10,7 +8,7 @@
 	\end{align*}
 }\end{Bemerkung}
 
-\begin{Satz}{
+\begin{Satz}{\label{vl_12_satz_01}
 	Sei $f \in \mathcal{R}_{[a,b]}$. Für $ a \leq x \leq b$ setze man 
 	\begin{align*}
 		F(x) = \int_a^b f(t) \dd{t}
@@ -19,7 +17,7 @@
 	\begin{enumerate}
 		\item $F$ ist stetig auf $[a,b]$
 		\item Ist $f$ stetig in $x_0 \in [a,b]$, so ist $F$ in $x_0$ differenzierbar 
-		und es gilt $F'(x_0) = f'(x_0)$
+		und es \linebreak gilt $F'(x_0) = f'(x_0)$
 	\end{enumerate}
 	\textbf{Beweis:}
 	\begin{enumerate}
@@ -39,7 +37,7 @@
 		Da $\epsilon > 0$ beliebig gewählt war, folgt die Aussage
 	\end{enumerate}
 	\item Sei $h \in \mathbb{R}$, so dass $x_0 +h \in [a,b]$.
-	Dann gibgt es ein $\xi_h$ zwischen $x_0$ und $x_0+h$ mit:
+	Dann gibt es ein $\xi_h$ zwischen $x_0$ und $x_0+h$ mit:
 	\begin{align*}
 		\frac{F(x_0 + h) - F(x_0)}{h} = & \frac{\int_a^{x_0+h}f(t)\dd{t}-
 		\int_a^{x_0}f(t)\dd{t}}{	h} \\
@@ -52,7 +50,7 @@
 }\end{Satz}
 
 
-\begin{Satz}{
+\begin{Satz}{\label{vl_12_satz_02}
 	Ist $f \in \mathcal{R}_{[a,b]}$ und es gilt $F: [a,] \rightarrow \mathbb{R}$
 	differenzierbar mit $F' = f$. Dann gilt
 	\begin{align*}
@@ -68,14 +66,15 @@
 	Sei $\epsilon >0 $ gegeben. Man wähle eine Partition $P = \{x_0, \hdots, x_n\}$ 
 	mit 
 	\begin{align*}
-		S(P,f) - s(P,f) < \epsilon
+		S(P,f) - s(P,f) < & \epsilon
 	\end{align*}
-	Weiter existiert aufgrund des Mittelwertsatzes der Differential-Rechnung %TODO 
+	Weiter existiert aufgrund des Mittelwertsatzes der Differential-Rechnung
+	(Satz~\ref{vl_07_MWS}) 
 	$\xi \in [x_{i-1}, x_i]$ mit 
 	\begin{align*}
-		F(x_i) - F(x_{i-1}) = f(\xi_i) \cdot \Delta x_i
+		F(x_i) - F(x_{i-1}) = &  f(\xi_i) \cdot \Delta x_i
 	\end{align*}
-	Nach Satz 7 P2 %TODO
+	Nach Satz~\ref{kap10_satz19}
 	gilt 
 	\begin{align*}
 		\epsilon > & \abs{ \int_a^b f \dd{x} - \sum_{i=1}^n f(\xi_i) \Delta x_i} \\
@@ -94,7 +93,7 @@
 			& t \mapsto \int_a^b f\dd{x}
 		\end{align*}
 		als \emph{unbestimmtes Integral} von $f$.
-		\item Satz 2 %TODO
+		\item Satz~\ref{vl_12_satz_02}
 		sagt also das jede Stammfunktion ein unbestimmtes Integral von $f$ ist 
 	\end{itemize}
 }\end{Bemerkung}
@@ -109,7 +108,8 @@
 		(F+ c)' = F' ) f
 	\end{align*}
 	$\Rightarrow$ \\
-	Das war eine Folgerung des Mittelwertsatzes der Differentialrechnung %TODO
+	Das war eine Folgerung des Mittelwertsatzes der Differentialrechnung 
+	(Satz~\ref{vl_07_MWS}).
 }\end{Proposition}
 
 \begin{Bemerkung}{
@@ -124,7 +124,7 @@
 	 laxe Umgang mit den Begriffen unkritisch.
 }\end{Bemerkung}
 
-\begin{Satz}[Partielle Integration]{
+\begin{Satz}[Partielle Integration]{\label{vl_12_satz_03}
 	Seien $F,G: [a,b] \rightarrow \mathbb{R}$ differenzierbar mit 
 	\begin{align*}
 		F' = f \text{ und } G' = g 
@@ -141,15 +141,15 @@
 		= & f(x)G(x) + F(x)g(x) -f(x)G(x)
 	\end{align*}
 	Ergo: die rechte Seite ist eine Stammfunktion des Integranden der 
-	linken Seite. Damit folgt die Aussage aus Satz 2. %TODO
+	linken Seite. Damit folgt die Aussage aus Satz~\ref{vl_12_satz_02}.
 }\end{Satz}
 
 \begin{Beispiel}{
 	\begin{align*}
 		\int_a^b cos^2(x) \dd{x} = & \int_a^b cos(x) \cdot cos(x) \dd{x} \\
-		= & cos(x) \cdot sin(x) \vert_a^b + \int_a^b sin^2 \dd{x} \\
-		= & cos(x) \cdot sin(x) \vert_a^b + \int_a^b 1 - cos^2(x) \dd{x} \\
-		= &  cos(x) \cdot sin(x) \vert_a^b + \int_a^b 1 \dd{x} - \int_a^b cos^2(x) 
+		= & \left. cos(x) \cdot sin(x) \right\vert_a^b + \int_a^b sin^2 \dd{x} \\
+		= & \left. cos(x) \cdot sin(x) \right\vert_a^b + \int_a^b 1 - cos^2(x) \dd{x} \\
+		= &  \left. cos(x) \cdot sin(x) \right\vert_a^b + \int_a^b 1 \dd{x} - \int_a^b cos^2(x) 
 		\dd{x} \\
 		\text{Ergo: } \int_a^b cos^2(x) \dd{x} = & \frac{1}{2} (cos(x) sin(x) 
 		\vert_a^b - (b-a))
@@ -159,13 +159,13 @@
 		\int_a^b \ln (x) \dd{x} \text{ wobei } 0 \not\in [a,b] \\
 		\int 1 \cdot \ln (x) \dd{x} = & x \ln (x)\vert_a^b - 
 		\int_a^b x \cdot \frac{1}{x} \dd{x} \\
-		= &  \ln (x)\vert_a^b - \int_a^b 1 \dd{x} \\
-		= & \ln (x)\vert_a^b - x\vert_a^b \\
-		= & \ln (x)\vert_a^b - (b - a)
+		= & \left. \ln (x) \right\vert_a^b - \int_a^b 1 \dd{x} \\
+		= & \left. \ln (x)\right\vert_a^b - \left. x\right\vert_a^b \\
+		= & \left. \ln (x)\right\vert_a^b - (b - a)
 	\end{align*}
 }\end{Beispiel}
 
-\begin{Satz}{
+\begin{Satz}{\label{vl_12_satz_04}
 	Sei $f: [a,b] \rightarrow \mathbb{R}$ stetig und $\phi: [c,d] \rightarrow [a,b]$ 
 	stetig differenzierbar. Dann gilt
 	\begin{align*}
@@ -206,17 +206,17 @@
 	\begin{align*}
 		r \int_{-r}^r \sqrt{1 - \frac{x^2}{r^2}} \dd{x} = & r \int_{-\frac{\pi}{2}}
 		^{\frac{\pi}{2}} \sqrt{1 - \frac{\phi^2(t)}{r^2}} \cdot \phi'(t) \dd{t} \\
-		= & r \int_{-\frac{pi}{2}}^{\frac{\pi}{2}} \sqrt{cos^2(t)} cos(t) r\dd{t} \\
+		= & r \int_{-\frac{\pi}{2}}^{\frac{\pi}{2}} \sqrt{cos^2(t)} cos(t) r\dd{t} \\
 		= & r^2 \int_{\frac{-\pi}{2}}^{\frac{\pi}{2}} cos^2(t)\dd{t} \\
 		= & \frac{r^2}{2} \cdot \pi
 	\end{align*}	 
-}\end{Beispiel} %TODO
+}\end{Beispiel}
 
 \begin{Beispiel}
 	\begin{align*}
 		\int_a^b \frac{\dd{x}}{1-x^2} \text{ wobei } -1, 1 \notin [a,b]
 	\end{align*}
-	Vorgehen Partialbruchzerlegung: Man zerlegt den Nennen in seine Linerarfaktoren 
+	Vorgehen Partialbruchzerlegung: Man zerlegt den Nennen in seine Linearfaktoren 
 	und bestimmt Konstanten $\alpha, \beta \in \mathbb{R}$ mit 
 	\begin{align*}
 		\frac{1}{1-x^2} = \frac{\alpha}{1+x} + \frac{\beta}{1-x}
@@ -235,15 +235,16 @@
 	Nun gilt für $\phi(t) = 1 - t$:
 	\begin{align*}
 		\int_a^b \frac{\dd{x}}{1-x} = \int_{1-a}^{1-b} \frac{-1 \dd{t}}{1 \phi(t)}
-		= - \int_{-a}^{1-b} \frac{\dd{t}}{t} = -\ln(t)\vert_a^b
+		= - \int_{-a}^{1-b} \frac{\dd{t}}{t} = \left. -\ln(t)\right\vert_a^b
 	\end{align*}
 	Weiter gilt mit $\phi(t) = t-1$
 	\begin{align*}
-		\int_a^b \frac{\dd{x}}{1+x} = \int_{1+a}^{1+b} \frac{\dd{t]}}{t} = \ln(t) \vert_{1+a}^{1+b}
+		\int_a^b \frac{\dd{x}}{1+x} = \int_{1+a}^{1+b} \frac{\dd{t}}{t} = \left.\ln 
+		(t) \right\vert_{1+a}^{1+b}
 	\end{align*}
 	Ergo
 	\begin{align*}
 		\frac{1}{2}(\ln(1+b) - \ln(1-b) - (\ln(1+a) - \ln(1-a))
-		= \frac{1}{2} \ln \frac{1+x}{1-x}\vert_a^b
+		= \left. \frac{1}{2} \ln \frac{1+x}{1-x}\right\vert_a^b
 	\end{align*}	
 \end{Beispiel}
