Skizzen gezeichnet (nicht mit TikZ)

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -34,7 +34,8 @@
 % 3. Argument Funktion, die zu integrieren ist
 % Beispiel mit Integration nach dy: \unint[y]{a}{b}{f(y)}
 % oder kurz \unint[y] ab {f(y)}
-
+\newcommand{\riemann}[2]{\mathcal{R}_{[{#1},{#2}]}}
+% \riemann{1}{2} = \mathcal{R}_{[a,b]}
 
 \begin{document}
 \include{vl_04}
