--- a/vl_09.tex
+++ b/vl_09.tex
@@ -59,11 +59,18 @@ Dabei heißt auf \enquote{natürliche Weise} insbesondere:
 	\end{align*}
 	\input{plot_rechteck_integral}
 	
-	\item gilt $f(x) \leq g(x)$ $(x \in [a,b])$ so fordern wir
+	\item gilt $f(x) \leq g(x)$ $(x \in [a,b])$ so fordern wir (Abbildung~
+	\ref{plot_flaeche_zweier_fkt})
 	\begin{align*}
 		\int_a^b f \dd{x} \leq \int_a^b g(x) \dd{x} 
 	\end{align*}
-	%TODO Grafik
+	\begin{figure}[ht]
+		\begin{center}
+			\includegraphics[scale=0.5]{./skizzen/plot_integral_zwei_fkt}
+		\end{center}
+		\caption{Flächeninhalt zweier Funktionen}
+		\label{plot_flaeche_zweier_fkt}
+	\end{figure}
 	
 	\item für $c \in [a,b]$ soll gelten (Abbildung~\ref{fig_integral_aufteilen})
 	\begin{align*}
