--- a/vl_11.tex
+++ b/vl_11.tex
@@ -262,6 +262,15 @@
 \begin{Satz}[Mittelwertsatz der Integralrechnung]{
 	Seien $f,g: [a,b] \rightarrow \mathbb{R}$ stetig und 
 	$g(x) \geq 0$ $(x \in[a,b])$. \\
+	(Abbildung~\ref{plot_MWS_int}) 
+	\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.5]{./skizzen/mws_int}
+	\end{center}
+	\caption{Mittelwertsatz der Integralrechnung}
+	\label{plot_MWS_int}
+	\end{figure}		
+	
 	Dann existiert ein $\xi \in [a,b]$ mit 
 	\begin{align*}
 		\int_a^b f g \dd{x} = f(\xi) \int_a^b g\dd{x}
