--- a/monotone_fkt_riemann_intbar.tex
+++ b/monotone_fkt_riemann_intbar.tex
@@ -1,4 +1,5 @@
 \begin{figure}
+	\begin{center}
 	\begin{tikzpicture}
 		\draw[very thin, gray, step = 0.5] (0,-0.9) grid (3.4,2.4);
 		
@@ -23,5 +24,7 @@
 		\draw[thick, black](2.9, -0.5) -- (2.9, 1.94);
 	
 	\end{tikzpicture}
+	\end{center}
+	\caption{Monotone Funktion}
 	\label{fig:Monotone_Funktion_Riemannint}
 \end{figure}
