Ordnerpfade korrigiert und kleine Verbesserungen eingefügt
Pfade linuxkompatibel gemacht (case sensitive)
Nummerierung angepasst in VL 11
kleine Anpassungen

--- a/vl_10.tex
+++ b/vl_10.tex
@@ -147,7 +147,7 @@
 	Dann gilt $f \in \mathcal{R}_{[a,b]}$.\\
 	\begin{figure}[ht]
 		\begin{center}
-			\includegraphics[scale=0.5]{./skizzen/plot_fkt_unstetigkeitsstellen}
+			\includegraphics[scale=0.5]{Skizzen/plot_fkt_unstetigkeitsstellen}
 		\end{center}
 		\caption{Funktion mit endlichen Unstetigkeitsstellen}
 		\label{plot_fkt_unstetigketsstellen}
@@ -204,7 +204,7 @@
 	\end{align*}
 	\begin{figure}
 		\begin{center}
-			\includegraphics[scale=0.5]{./skizzen/plot_treppenfkt}
+			\includegraphics[scale=0.5]{Skizzen/plot_treppenfkt}
 		\end{center}
 		\caption{Treppenfunktion}
 		\label{plot_treppenfkt}
