--- a/vl_11.tex
+++ b/vl_11.tex
@@ -122,7 +122,7 @@
 		\begin{align*}
 			\int_a^b c f\dd{x} = c \int_a^b f\dd{x}
 		\end{align*}
-		Insbesondere gilt also 
+		\item Insbesondere gilt also 
 		\begin{align*}
 			f_1 + f_2 \in \mathcal{R}_{[a,b]} \text{und} \\
 			c f \in \mathcal{R}_{[a,b]}
@@ -218,7 +218,7 @@
 			\int_a^b \dd{x} : \mathcal{R}_{[a,b]} \rightarrow  & \mathbb{R} \\
 			f \mapsto & \int_a^b f\dd{x}
 		\end{align*}
-		ein lineares Funktionsglied ist
+		ein lineares Funktionsglied\todo{Das Wort ist glaube ich falsch. Lineares Funktional könnte stimmen} ist
 		\item Eigenschaft 2 sagt, dass dieses Funktional positiv ist
 		(also nicht-negative Funktionen einen nicht negativen Wert zuordnet)
 		\item Eigenschaft 4 impliziert eine gewisse stetigkeit
@@ -250,7 +250,7 @@
 	\end{align*}
 	Offensichtlich gilt 
 	\begin{align*}
-		\abs{f(x)} = \abs{c f(x)} \geq c f(x) \text{ } (x \in [a,b])
+		\abs{f(x)} = \abs{c f(x)} \geq c f(x) \quad (x \in [a,b])
 	\end{align*}
 	Damit gilt mit Satz~\ref{vl_11_satz24}
 	\begin{align*}
@@ -265,7 +265,7 @@
 	(Abbildung~\ref{plot_MWS_int}) 
 	\begin{figure}
 	\begin{center}
-		\includegraphics[scale=0.5]{./skizzen/mws_int}
+		\includegraphics[scale=0.5]{Skizzen/mws_int}
 	\end{center}
 	\caption{Mittelwertsatz der Integralrechnung}
 	\label{plot_MWS_int}
