--- a/vl_12.tex
+++ b/vl_12.tex
@@ -11,7 +11,7 @@
 \begin{Satz}{\label{vl_12_satz_01}
 	Sei $f \in \mathcal{R}_{[a,b]}$. Für $ a \leq x \leq b$ setze man 
 	\begin{align*}
-		F(x) = \int_a^b f(t) \dd{t}
+		F(x) = \int_a^x f(t) \dd{t}
 	\end{align*}
 	Dann gilt
 	\begin{enumerate}
