--- a/vl_09.tex
+++ b/vl_09.tex
@@ -66,7 +66,7 @@ Dabei heißt auf \enquote{natürliche Weise} insbesondere:
 	\end{align*}
 	\begin{figure}[ht]
 		\begin{center}
-			\includegraphics[scale=0.5]{./skizzen/plot_integral_zwei_fkt}
+			\includegraphics[scale=0.5]{Skizzen/plot_integral_zwei_fkt}
 		\end{center}
 		\caption{Flächeninhalt zweier Funktionen}
 		\label{plot_flaeche_zweier_fkt}
