--- a/vl_12.tex
+++ b/vl_12.tex
@@ -17,7 +17,7 @@
 	\begin{enumerate}
 		\item $F$ ist stetig auf $[a,b]$
 		\item Ist $f$ stetig in $x_0 \in [a,b]$, so ist $F$ in $x_0$ differenzierbar 
-		und es \linebreak gilt $F'(x_0) = f'(x_0)$
+		und es \linebreak gilt $F'(x_0) = f(x_0)$
 	\end{enumerate}
 	\textbf{Beweis:}
 	\begin{enumerate}
@@ -51,7 +51,7 @@
 
 
 \begin{Satz}{\label{vl_12_satz_02}
-	Ist $f \in \mathcal{R}_{[a,b]}$ und es gilt $F: [a,] \rightarrow \mathbb{R}$
+	Ist $f \in \mathcal{R}_{[a,b]}$ und es gilt $F: [a,b] \rightarrow \mathbb{R}$
 	differenzierbar mit $F' = f$. Dann gilt
 	\begin{align*}
 		\int_a^b f\dd{x} = F(b) - F(a) 
