Dateien neu verlinkt und kompiliert

--- a/Vorlesungen/vl_09.tex
+++ b/Vorlesungen/vl_09.tex
@@ -48,7 +48,7 @@
 \underline{\textbf{Ziel}:} Wir wollen auf \enquote{natürliche}\todo{eigentlich wäre "\\emph" sogar besser als Anführungsstriche} Weise einen 
 Flächeninhaltsbegriff definieren, der uns erlaubt, die Fläche zwischen den Graphen 
 einer Funktion und der $x-$Achse zu bestimmen (Abbildung~\ref{fig_int_vorgehen}).
-	\input{plot_integral_f}
+	\input{Plots/plot_integral_f}
 	
 Dabei heißt auf \enquote{natürliche Weise} insbesondere: 
 \begin{itemize}
@@ -57,7 +57,7 @@ Dabei heißt auf \enquote{natürliche Weise} insbesondere:
 	\begin{align*}
 		\int_a^b f \dd{x} = c \cdot ( b - a)
 	\end{align*}
-	\input{plot_rechteck_integral}
+	\input{Plots/plot_rechteck_integral}
 	
 	\item gilt $f(x) \leq g(x)$ $(x \in [a,b])$ so fordern wir (Abbildung~
 	\ref{plot_flaeche_zweier_fkt})
@@ -78,7 +78,7 @@ Dabei heißt auf \enquote{natürliche Weise} insbesondere:
 	\end{align*}
 	Vorgehen: Man unterteile $[a,b]$ in \enquote{viele} Teilintervalle, auf denen 
 	$f$ nahezu konstant ist.
-	\input{plot_aufteilung_integral}
+	\input{Plots/plot_aufteilung_integral}
 \end{itemize} 
 
 \begin{Definition}{
@@ -87,7 +87,7 @@ Dabei heißt auf \enquote{natürliche Weise} insbesondere:
 	$[a,b]$ ist eine endliche Menge von Punkten $a = x_0 \leq x_1 \leq \hdots
 	\leq x_n = b$.\\
 	Wir schreiben $\Delta x_i = x_i - x_{i-1}$
-	\input{plot_integral_partition}
+	\input{Plots/plot_integral_partition}
 }\end{Definition}
 
 \begin{Definition}{ \label{def_riemann-integrierbar}
@@ -128,7 +128,7 @@ Dabei heißt auf \enquote{natürliche Weise} insbesondere:
 	das \underline{Riemannintegral} von $f$ über $[a,b]$.\\
 	Die Menge der Riemanintegrierbaren Funktionen auf $[a,b]$ bezeichnen wir 
 	mit $\mathcal{R}$ beziehungsweise $\mathcal{R}_{[a,b]}$.\\
-	\input{plot_integral_riemannintegral}
+	\input{Plots/plot_integral_riemannintegral}
 	\textbf{Bemerkungen}
 	\begin{itemize}
 		\item Da $f$ beschränkt ist, gibt es $m \leq M$ in $\mathbb{R}$ mit:
