--- a/gesamt.tex
+++ b/gesamt.tex
@@ -38,15 +38,15 @@
 % \riemann{1}{2} = \mathcal{R}_{[a,b]}
 
 \begin{document}
-\include{vl_04}
-\include{vl_05}
-\include{vl_06}
-\include{vl_07}
-\include{vl_08}
-\include{vl_09}
-\include{vl_10}
-\include{vl_11}
-\include{vl_12}
+\include{Vorlesungen/vl_04}
+\include{Vorlesungen/vl_05}
+\include{Vorlesungen/vl_06}
+\include{Vorlesungen/vl_07}
+\include{Vorlesungen/vl_08}
+\include{Vorlesungen/vl_09}
+\include{Vorlesungen/vl_10}
+\include{Vorlesungen/vl_11}
+\include{Vorlesungen/vl_12}
 
 \end{document}
  	
