--- a/Vorlesungen/vl_07.tex
+++ b/Vorlesungen/vl_07.tex
@@ -38,7 +38,7 @@
 	 Mit anderen Worten: $\xi$ ist auch ein globales Maximum und und daher auch 
 	 ein lokales Maximum. Mit Satz~\ref{satz_8}
 	 folgt: $h'(\xi) = 0$
-	 \input{plot_MWS}
+	 \input{Plots/plot_MWS}
 }\end{Satz}
 	
 \begin{Satz}[Mittelwertsatz(MWS)]{\label{vl_07_MWS}
